@@ -1,5 +1,13 @@
 2007-10-26  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+	  vpn-password-dialog.c
+		- Ensure errors are returned to NM when something goes wrong with
+			the GetSecrets request, or when the VPN auth dialog is
+			canceled
+
+2007-10-26  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-dialog.c
 		- (security_combo_init): don't try accessing EAP method if EAP isn't
 			configured
